lombok 추가, GetDepartureBusTask -> Retrofit 변경